--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-hot-middleware": "^2.21.0"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "tinper-bee": "^1.2.0"
   }
 }
