--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "webpack-react-single-pages",
-  "version": "1.0.6",
+  "name": "tinper-react-demo",
+  "version": "2.0.0",
   "description": "uba boilerplate react spa",
   "main": "index.js",
   "scripts": {
@@ -10,31 +10,30 @@
   "author": "yueming@yonyou.com",
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^7.1.6",
+    "autoprefixer": "^7.2.4",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.8",
     "cssnano": "^3.10.0",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.30.1",
+    "file-loader": "^1.1.6",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
-    "open-browser-webpack-plugin": "0.0.5",
-    "postcss-loader": "^2.0.9",
-    "style-loader": "^0.19.0",
-    "uba": "2.2.3",
-    "uglifyjs-webpack-plugin": "^1.1.2",
-    "url-loader": "^0.6.2",
-    "webpack-hot-middleware": "^2.21.0"
+    "postcss-loader": "^2.0.10",
+    "style-loader": "^0.19.1",
+    "uba": "^3.0.0-alpha.0",
+    "uba-build": "^3.0.0-alpha.0",
+    "uba-server": "^3.0.0-alpha.4",
+    "uba-server-mock": "^1.0.6",
+    "uba-server-proxy": "^1.0.1",
+    "uba-server-static": "^1.0.1",
+    "url-loader": "^0.6.2"
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "tinper-bee": "^1.2.0"
+    "tinper-bee": "^1.2.5"
   }
 }
